# Shiroha

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  flake.nix  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yml
.trellis/: .template-hashes.json
.trellis/docs/: version-roadmap.md
.trellis/spec/backend/: async-patterns.md  cargo-conventions.md  conventions.md  index.md  (+12 more)
app/: AGENTS.md
app/sctl/: AGENTS.md  Cargo.toml
app/sctl/src/: cli_support.rs  client.rs  command_runner.rs  completion.rs  control.rs  event_presenter.rs  flow_presenter.rs  job_presenter.rs  lib.rs  main.rs  presenter_support.rs
app/sctl/tests/: cli_roundtrip.rs
app/shirohad/: AGENTS.md  Cargo.toml
app/shirohad/src/: flow_registry.rs  flow_service.rs  grpc_tests.rs  job_events.rs  job_runtime.rs  job_service.rs  main.rs  node_runtime.rs  server.rs  service_support.rs  test_support.rs
app/shirohad/src/test_support/: flow_builders.rs  runtime_helpers.rs
app/shirohad/test-fixtures/flow-component/: Cargo.toml
app/shirohad/test-fixtures/flow-component/src/: lib.rs
components/example-machine/: Cargo.toml
crate/: AGENTS.md
crate/shiroha-client/: AGENTS.md  Cargo.toml
crate/shiroha-control/: Cargo.toml
crate/shiroha-control/src/: client.rs  flow.rs  job.rs  lib.rs  manifest.rs
crate/shiroha-core/: AGENTS.md  Cargo.toml
crate/shiroha-core/src/: error.rs  event.rs  flow.rs  job.rs  lib.rs  storage.rs  transport.rs
crate/shiroha-engine/: AGENTS.md  Cargo.toml
crate/shiroha-engine/src/: engine.rs  job.rs  lib.rs  scheduler.rs  timer.rs  validator.rs
crate/shiroha-proto/: AGENTS.md  Cargo.toml  build.rs
crate/shiroha-proto/proto/: shiroha.proto
crate/shiroha-proto/src/: lib.rs
crate/shiroha-runtime/: Cargo.toml
crate/shiroha-sdk/: AGENTS.md  Cargo.toml  build.rs
crate/shiroha-sdk/src/: lib.rs
crate/shiroha-sdk/test-fixtures/flow-smoke/: Cargo.toml
crate/shiroha-sdk/test-fixtures/flow-smoke/src/: lib.rs
crate/shiroha-sdk/test-fixtures/network-smoke/: Cargo.toml
crate/shiroha-sdk/test-fixtures/network-smoke/src/: lib.rs
crate/shiroha-sdk/test-fixtures/sdk-smoke/: Cargo.toml
crate/shiroha-sdk/test-fixtures/sdk-smoke/src/: lib.rs
crate/shiroha-sdk/test-fixtures/storage-smoke/: Cargo.toml
crate/shiroha-sdk/test-fixtures/storage-smoke/src/: lib.rs
crate/shiroha-sdk/tests/: smoke_fixture.rs
crate/shiroha-store-redb/: AGENTS.md  Cargo.toml
crate/shiroha-store-redb/src/: lib.rs  store.rs
crate/shiroha-store-sqlite/: Cargo.toml
crate/shiroha-testkit/: Cargo.toml
crate/shiroha-wasm/: AGENTS.md  Cargo.toml
crate/shiroha-wasm/src/: error.rs  host.rs  lib.rs  module_cache.rs  runtime.rs
crate/shiroha-wasm/src/host/: network_support.rs  storage_support.rs
crate/shiroha-wasm/test-fixtures/network-component/: Cargo.toml
crate/shiroha-wasm/test-fixtures/network-component/src/: lib.rs
crate/shiroha-wasm/test-fixtures/storage-component/: Cargo.toml
crate/shiroha-wasm/test-fixtures/storage-component/src/: lib.rs
crate/shiroha-wasm/wit/: flow.wit  full-flow.wit  network-flow.wit  storage-flow.wit  store.wit
crate/shiroha-wit/: Cargo.toml
crates/control/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: action.rs  adapter.rs  lib.rs  runtime.rs  task.rs  tests.rs
crates/ir/: Cargo.toml
crates/plugin/: Cargo.toml
crates/shiroha/: Cargo.toml
crates/shiroha-adapter-wasm/: Cargo.toml
crates/shiroha-adapter-wasm/benches/: wasm_runtime.rs
crates/shiroha-adapter-wasm/src/: bindings.rs  convert.rs  error.rs  executor.rs  lib.rs  loader.rs  runtime.rs
crates/shiroha-config/: Cargo.toml
crates/shiroha-core/: Cargo.toml
crates/shiroha-core/benches/: core_engine.rs
crates/shiroha-core/src/: engine.rs  executor.rs  id.rs  lib.rs  limits.rs  model.rs  runtime.rs  validation.rs
crates/shiroha-error/: Cargo.toml
crates/shiroha-guest/: Cargo.toml
crates/shiroha-ir/: Cargo.toml
crates/shiroha-logger/: Cargo.toml
crates/shiroha-network/: Cargo.toml
crates/shiroha-orchestrator/: Cargo.toml
crates/shiroha-storage/: Cargo.toml
crates/shiroha/examples/: local-runner.rs
crates/shiroha/src/: lib.rs
crates/shiroha/tests/: local_component.rs
crates/wasm/: Cargo.toml  build.rs
crates/wasm/src/: adapter.rs  bindings.rs  error.rs  host.rs  invoker.rs  lib.rs
crates/wasm/tests/: bindings_test.rs  integration.rs  mod.rs
doc/: README.md  architecture.md  control-plane.md  core-model.md  data-flow.md  dispatch.md  engine.md  open-questions.md  roadmap.md  storage.md  transport.md  wit-interfaces.md  worker.md  workspace.md
docs/: 00-glossary.md  01-overview.md  01-principles.md  02-architecture.md  02-runtime-modes.md  03-modules.md  03-workspace.md  04-abstractions.md  04-wit-interface.md  05-capability.md  05-semantics.md  06-dispatch.md  06-wit.md  07-dataflow.md  07-guest-sdk.md  08-grpc.md  08-versioning.md  09-contracts.md  09-transport-storage.md  10-client.md  10-observability.md  11-execution-semantics.md  11-roadmap.md  11-security.md  12-roadmap.md  13-upgrades-and-migrations.md  14-development-guidelines.md  99-roadmap.md  AGENTS.md  README.md  architecture.md  backends.md  core-concepts.md  development.md  event-sourcing.md  execution-model.md  interfaces.md  operations.md  phase1-audit-checklist.md  roadmap.md  (+5 more)
docs/benchmarks/: v0.1-baseline.md
docs/brainstorms/: 2026-06-24-shiroha-framework-requirements.md
docs/plans/: 2026-06-24-001-feat-shiroha-core-plan.md  2026-06-24-002-feat-shiroha-wasm-plan.md  2026-06-24-003-feat-shiroha-engine-plan.md  2026-06-24-004-feat-shiroha-controller-plan.md  2026-06-24-005-feat-shiroha-sctl-plan.md
docs/testing/: v0.1-acceptance.md
example/advanced/: Cargo.toml  README.md
example/simple/: Cargo.toml  README.md
example/sub/: README.md
example/warning-deadlock/: Cargo.toml  README.md
examples/sm-example/: Cargo.toml  build.rs
examples/sm-example/src/: lib.rs
plugins/shiroha-sdk-rs/: Cargo.toml
wit/: state-machine.wit
wit/shiroha-machine/: world.wit
(+98 files in other folders)
