[workspace]
members = [
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "GPL-3.0-only"
repository = "https://github.com/Hobr/Shiroha"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["time", "rt"] }
async-trait = "0.1"

# WASM 运行时
wasmtime = { version = "46.0.1", features = ["trace-log", "component-model"] }
wasmtime-wasi = { version = "46.0.1" }

# CLI
clap = { version = "4.6", features = ["derive", "env", "string", "unicode"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }

# gRPC
tonic = { version = "0.14", features = ["gzip", "deflate", "zstd"] }
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# 网络
reqwest = { version = "0.13", default-features = false, features = ["blocking", "brotli", "cookies", "deflate", "gzip", "http2", "json", "query", "rustls", "socks", "zstd"] }

# 配置管理
config = "0.15"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1", features = ["v4"] }

# 构建
shadow-rs = { version = "2.0", features = ["cargo_metadata"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
