[workspace]
members = [
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "GPL-3.0-only"
repository = "https://github.com/Hobr/Shiroha"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.53", features = ["full"] }
tokio-util = { version = "0.7", features = ["time", "rt"] }
async-trait = "0.1"

# WASM runtime
wasmtime = { version = "47", features = ["async", "trace-log", "component-model"] }
wasmtime-wasi = { version = "47" }
wit-bindgen = "0.59.0"

# CLI (reserved for pre-v1 controller tooling)
clap = { version = "4.6", features = ["derive", "env", "string", "unicode"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }

# gRPC (reserved for pre-v1 controller/node work)
tonic = { version = "0.14", features = ["gzip", "deflate", "zstd"] }
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Networking
reqwest = { version = "0.13", default-features = false, features = ["blocking", "brotli", "cookies", "deflate", "gzip", "http2", "json", "query", "rustls", "socks", "zstd"] }

# Configuration
config = "0.15"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identifiers
uuid = { version = "1", features = ["v4"] }

# Build metadata
shadow-rs = { version = "2.0", features = ["cargo_metadata"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
