[package]
name = "sctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shiroha-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }

clap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
