[package]
name = "sctl"
description = "Shiroha Control CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shiroha-client.workspace = true
shiroha-proto.workspace = true

tokio.workspace = true
tonic.workspace = true

clap.workspace = true
clap_complete.workspace = true

serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
shadow-rs.workspace = true

[build-dependencies]
shadow-rs.workspace = true

[dev-dependencies]
fs2.workspace = true
