[package]
name = "shirohad"
description = "Shiroha Daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shiroha-core = { workspace = true }
shiroha-engine = { workspace = true }
shiroha-wasm = { workspace = true }
shiroha-store-redb = { workspace = true }
shiroha-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }

clap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

serde_json = { workspace = true }
uuid = { workspace = true }

shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
