[package]
name = "shiroha-core"
description = "Shiroha Type Core "
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }

uuid = { workspace = true }

tracing = { workspace = true }
