[package]
name = "shiroha-engine"
description = "Shiroha State Machine Engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shiroha-core.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

tracing.workspace = true

thiserror.workspace = true

uuid.workspace = true
