[package]
name = "shiroha-proto"
description = "Shiroha gRPC API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic.workspace = true
tonic-prost = "0.14"

prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
