[package]
name = "shiroha-sdk"
description = "Shiroha WASM Guest SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["AGENTS.md", "Cargo.toml", "build.rs", "src/**", "tests/**"]

[dependencies]
wit-bindgen = "0.55"

[build-dependencies]
shiroha-wit = { workspace = true }
