[package]
name = "shiroha-store-redb"
description = "Shiroha Redb 存储后端"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shiroha-core = { workspace = true }

redb = { workspace = true }

tokio = { workspace = true }

tracing = { workspace = true }

thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
