[package]
name = "shiroha-wasm"
description = "Shiroha WASM 运行时"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shiroha-core = { workspace = true }

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

tokio = { workspace = true }

tracing = { workspace = true }

thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
