[package]
name = "shiroha-adapter-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
shiroha-core = { path = "../shiroha-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "wasm_runtime"
harness = false
