[package]
name = "shiroha-sm-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.39.0"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
